// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`update > should work 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// biome-ignore lint: disable
// Generated by fnclip

export * from './isInRange';
export * from './objectKeys';"
`;

exports[`update > should work 2`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// biome-ignore lint: disable
// Generated by fnclip

//#region src/functions/number/isInRange/index.d.ts
/**
 * Is a number in a range
 *
 * @example
 *
 * \`\`\`js
 * isInRange(5, [1, 10]) // -> true
 * \`\`\`
 *
 * @see {@link https://s3xysteak.github.io/fnclip/functions/number/isInRange/}
 */
declare function isInRange(val: number, [a, b]: [number, number]): boolean;
//#endregion
export { isInRange };"
`;

exports[`update > should work 3`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// biome-ignore lint: disable
// Generated by fnclip

//#region src/functions/number/isInRange/index.ts
/**
* Is a number in a range
*
* @example
*
* \`\`\`js
* isInRange(5, [1, 10]) // -> true
* \`\`\`
*
* @see {@link https://s3xysteak.github.io/fnclip/functions/number/isInRange/}
*/
function isInRange(val, [a, b]) {
	return val >= Math.min(a, b) && val <= Math.max(a, b);
}

//#endregion
export { isInRange };"
`;

exports[`update > should work 4`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// biome-ignore lint: disable
// Generated by fnclip

//#region src/functions/object/objectKeys/index.d.ts
/**
 * Strict typed \`Object.keys\`
 *
 * @link https://github.com/antfu/utils/blob/main/src/object.ts
 * @see {@link https://s3xysteak.github.io/fnclip/functions/object/objectKeys/}
 */
declare function objectKeys<T extends object>(obj: T): Array<\`\${keyof T & (string | number | boolean | null | undefined)}\`>;
//#endregion
export { objectKeys };"
`;

exports[`update > should work 5`] = `
"/* eslint-disable */
/* prettier-ignore */
// @ts-nocheck
// biome-ignore lint: disable
// Generated by fnclip

//#region src/functions/object/objectKeys/index.ts
/**
* Strict typed \`Object.keys\`
*
* @link https://github.com/antfu/utils/blob/main/src/object.ts
* @see {@link https://s3xysteak.github.io/fnclip/functions/object/objectKeys/}
*/
function objectKeys(obj) {
	return Object.keys(obj);
}

//#endregion
export { objectKeys };"
`;
